[Feat] Update homepage notice #140 (#146)
* test: getTotalNoticeSize 메서드 단위 테스트

* feat: 학과별 정보 수정

* feat: 학과별 공지 스크랩 로직 수정

* fix(DeptInfo#createViewUrl): 정상적으로 view Url을 만들지 못하던 문제 해결

* refactor(CategoryNoticeUpdater): updateKuisNoticeAsync에서 reverse로직 추가

* refactor: 시간 측정 로직 변경

* feat: 기존 학과별 공지 삭제 DDL문 작성

* test: 테스트에서 변경 가능한 리스트를 반환하도록 수정