@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.business;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.BUIS_ADMIN)
+import static com.kustacks.kuring.notice.domain.DepartmentName.BUIS_ADMIN;
+
+@RegisterDepartmentMap(key = BUIS_ADMIN)
 public class BusinessAdministrationDept extends BusinessCollege {
 
     public BusinessAdministrationDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class BusinessAdministrationDept extends BusinessCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("3685475");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("460");
-        List<String> menuSeqs = List.of("3243");
-
+        List<String> professorForumIds = List.of("10499");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "BIZ", boardSeqs, menuSeqs);
-        this.code = "126780";
-        this.departmentName = DepartmentName.BUIS_ADMIN;
+        this.noticeScrapInfo = new NoticeScrapInfo(BUIS_ADMIN.getKorName(), 441);
+        this.departmentName = BUIS_ADMIN;
     }
 }
