@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.sanghuo_biology;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.ANIMAL_RESOURCES)
+import static com.kustacks.kuring.notice.domain.DepartmentName.ANIMAL_RESOURCES;
+
+@RegisterDepartmentMap(key = ANIMAL_RESOURCES)
 public class AnimalResourcesFoodScienceBiotechnologyDept extends SanghuoBiologyCollege {
 
     public AnimalResourcesFoodScienceBiotechnologyDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class AnimalResourcesFoodScienceBiotechnologyDept extends SanghuoBiologyC
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15632573");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("202");
-        List<String> menuSeqs = List.of("1560");
-
+        List<String> professorForumIds = List.of("11016");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "FOODBIO", boardSeqs, menuSeqs);
-        this.code = "126909";
-        this.departmentName = DepartmentName.ANIMAL_RESOURCES;
+        this.noticeScrapInfo = new NoticeScrapInfo(ANIMAL_RESOURCES.getHostPrefix(), 923);
+        this.departmentName = ANIMAL_RESOURCES;
     }
 }
