@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.social_science;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.STATISTICS)
+import static com.kustacks.kuring.notice.domain.DepartmentName.STATISTICS;
+
+@RegisterDepartmentMap(key = STATISTICS)
 public class AppliedStatisticsDept extends SocialSciencesCollege {
 
     public AppliedStatisticsDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class AppliedStatisticsDept extends SocialSciencesCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("5081");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("963");
-        List<String> menuSeqs = List.of("6642");
-
+        List<String> professorForumIds = List.of("10389");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "STAT", boardSeqs, menuSeqs);
-        this.code = "127124";
-        this.departmentName = DepartmentName.STATISTICS;
+        this.noticeScrapInfo = new NoticeScrapInfo(STATISTICS.getHostPrefix(), 431);
+        this.departmentName = STATISTICS;
     }
 }
