@@ -9,6 +9,7 @@ import org.jsoup.select.Elements;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public abstract class NoticeHtmlParserTemplate {
 
@@ -33,7 +34,7 @@ public abstract class NoticeHtmlParserTemplate {
 
         return rows.stream()
                 .map(this::extractNoticeFromRow)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     protected abstract boolean support(DeptInfo deptInfo);
